changed some models, updated tests, controller
